--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 		<mule.version>3.9.2</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
+    	<uid>SIEBRENET</uid>
 	</properties>
 
 	<build>
